Revision history for Perl module Test::WWW::Mechanize::PSGI:

    - run request_send handlers before sending request (Olaf Alders)

0.34 Sun Jan  3 12:02:29 GMT 2010
    - update the README to reflect the name
    - fix handling of cookies, patch by tokuhirom

0.33 Tue Dec 15 07:12:18 GMT 2009
    - inital release
