@@ -1,0 +1,2 @@
+*.swp
+Test-WWW-Mechanize-PSGI-*
