@@ -1,9 +1,0 @@
-CHANGES
-lib/Test/WWW/Mechanize/PSGI.pm
-Makefile.PL
-MANIFEST			This list of files
-README
-t/cookie.t
-t/pod.t
-t/simple.t
-
