@@ -1,0 +1,57 @@
+name    = Test-WWW-Mechanize-PSGI
+author  = Leon Brocard <acme@astray.com>
+license = Perl_5
+copyright_holder = Leon Brocard
+copyright_year   = 2009
+version = 0.35
+main_module = lib/Test/WWW/Mechanize/PSGI.pm
+
+[GatherDir]
+exclude_filename = cpanfile
+exclude_filename = README
+
+[PruneCruft]
+[ManifestSkip]
+[License]
+[ExtraTests]
+[ExecDir]
+[ShareDir]
+[PkgVersion]
+
+[MakeMaker]
+[Manifest]
+
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
+
+[MetaResources]
+[MetaJSON]
+[MetaYAML]
+[Bugtracker]
+web = http://github.com/acme/%s/issues
+[GithubMeta]
+homepage = https://metacpan.org/release/Test-WWW-Mechanize-PSGI
+
+[AutoPrereqs]
+
+;[Test::Perl::Critic]
+
+[Test::CPAN::Changes]
+[Test::TidyAll]
+[ReadmeFromPod]
+[InstallGuide]
+[ModuleBuild]
+[PodWeaver]
+[NextRelease]
+format =  %-1v %{yyyy-MM-dd HH:mm:ss VVVV}d
+
+[Git::Contributors]
+[ContributorsFile]
+
+[@Git]
+
+[CPANFile]
+[CopyFilesFromBuild]
+copy = cpanfile
+copy = README
